# OSNP

./: .gitmodules  CMakeLists.txt  README.MD
2024/A/: jawaban.h  main.test.cpp
2024/B/: jawaban.cpp  main.cpp
